# napcas-framework

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  pyproject.toml  pytest.ini  setup.py
cpp/: CMakeLists.txt  python_bindings.cpp
cpp/include/: activation.h  attention.h  autograd.h  conv2d.h  data_loader.h  gan.h  gpu_utils.h  gru.h  linear.h  loss.h  lstm.h  mlp.h  module.h  napca_sim.h  napcas.h  nncell.h  optimizer.h  pooling.h  rnn.h  tensor.h  transformer.h  visualization.h
cpp/include/napcas/: common.h  device.h  tensor.h
cpp/src/: activation.cpp  attention.cpp  autograd.cpp  conv2d.cpp  data_loader.cpp  gan.cpp  gpu_utils.cpp  gru.cpp  linear.cpp  loss.cpp  lstm.cpp  mlp.cpp  napca_sim.cpp  napcas.cpp  nncell.cpp  optimizer.cpp  pooling.cpp  python_bindings.cpp  rnn.cpp  stb_image_impl.cpp  tensor.cpp  transformer.cpp  visualization.cpp
cpp/tests/: test_main.cpp
data/: synthetic.csv
docs/: Doxyfile  Framework NAPCAS.docx  Guide_Installation.txt  Guide_Installation_NAPCAS.txt  Projet NAPCAS.docx  README.md  avenir_12052025.txt  conf.py  developpement.txt  napcas-framework_11052025.txt  tree_12052025.txt  user_guide.aux  user_guide.fdb_latexmk  user_guide.fls  user_guide.out  user_guide.tex  user_guide.toc
docs/cpp/html/: activation_8h.html  activation_8h.js  activation_8h__dep__incl.dot  activation_8h__incl.dot  activation_8h_source.html  annotated.html  annotated_dup.js  attention_8h.html  attention_8h.js  attention_8h__dep__incl.dot  attention_8h__incl.dot  attention_8h_source.html  autograd_8h.html  autograd_8h.js  autograd_8h__incl.dot  autograd_8h_source.html  classAdam-members.html  classAdam.html  classAdam.js  classAdam__coll__graph.dot  classAutograd-members.html  classAutograd.html  classAutograd__coll__graph.dot  classConv2d-members.html  classConv2d.html  classConv2d.js  classConv2d__coll__graph.dot  classConv2d__inherit__graph.dot  classCrossEntropyLoss-members.html  classCrossEntropyLoss.html  classCrossEntropyLoss.js  classCrossEntropyLoss__coll__graph.dot  classDataLoader-members.html  classDataLoader.html  classDataLoader.js  classGAN-members.html  classGAN.html  classGAN.js  classGAN__coll__graph.dot  classGAN__inherit__graph.dot  (+224 more)
docs/cpp/html/search/: all_0.js  all_10.js  all_11.js  all_13.js  all_14.js  all_2.js  all_3.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  files_b.js  files_c.js  functions_0.js  (+21 more)
docs/cpp/latex/: activation_8h.tex  activation_8h__dep__incl.dot  activation_8h__incl.dot  activation_8h_source.tex  annotated.tex  attention_8h.tex  attention_8h__dep__incl.dot  attention_8h__incl.dot  attention_8h_source.tex  autograd_8h.tex  autograd_8h__incl.dot  autograd_8h_source.tex  classAdam.tex  classAutograd.tex  classConv2d.tex  classConv2d__coll__graph.dot  classConv2d__inherit__graph.dot  classCrossEntropyLoss.tex  classDataLoader.tex  classDataLoader__coll__graph.dot  classGAN.tex  classGAN__coll__graph.dot  classGAN__inherit__graph.dot  classGPUUtils.tex  classGPUUtils__coll__graph.dot  classGRU.tex  classGRU__coll__graph.dot  classGRU__inherit__graph.dot  classLSTM.tex  classLSTM__coll__graph.dot  classLSTM__inherit__graph.dot  classLinear.tex  classLinear__coll__graph.dot  classLinear__inherit__graph.dot  classMLP.tex  classMLP__coll__graph.dot  classMLP__inherit__graph.dot  classMSELoss.tex  classMSELoss__coll__graph.dot  classMaxPool2d.tex  (+107 more)
docs/examples/: 01_basic_tensor.ipynb  02_autograd_demo.ipynb  03_mlp_training.ipynb
docs/py/: conf.py  index.rst
docs/py/_build/doctrees/: environment.pickle  index.doctree
docs/py/_build/doctrees/source/: cppapi.doctree  index.doctree
docs/py/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/py/_build/html/_sources/source/: index.rst.txt
docs/py/_build/html/source/: cppapi.html  index.html
docs/py/source/: conf.py  cppapi.rst  modules.py
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst  visualization.rst
napcas/: __init__.py
python/: MANIFEST.in  Untitled.ipynb  Untitled1.ipynb  __init__.py  benchmark.py  napcas.py  pyproject.toml  setup.py  test_dataloader_autograd.py  test_napcas.py  test_napcas_components.py
python/Mes_tests/: Untitled.ipynb
python/examples/: cnn_example.py  gan_example.py  gan_training.py  gru_example.py  mlp_example.py  rnn_example.py  transformer_example.py
python/modules/: conv2d.py  data_loader.py  linear.py  loss.py  optimzer.py
python/modules/.ipynb_checkpoints/: activation-checkpoint.py
python/napcas/: __init__.py  core.py  data_augmentation.py
python/napcas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/napcas/modules/: __init__.py  activation.py  autograd.py  data_loader.py  gan.py  gru.py  linear.py  loss.py  mlp.py  napca_sim.py  optimizer.py  rnn.py  transformer.py  visualization.py
python/napcas/tests/: test_cifar10.py  test_dataloader_autograd.py  test_gan.py  test_mlp.py  test_napcas.py  test_napcas_components.py  test_transformer.py
python/tests/: test_conv2d.py  test_lstm_gru.py  test_visualization.py  test_visualization_interactive.py
python/utils/: functions.py
src/napcas/: __init__.py  visualization.py  visualization_interactive.py
src/napcas/examples/: cnn_example.py  gan_example.py  lstm_example.py  mlp_example.py  rnn_example.py  transformer_example.py
src/napcas/modules/: data_loader.py  loss.py  lstm.py  napcas.py  optimizer.py
src/napcas/tests/: test_cifar10.py  test_dataloader_autograd.py  test_mnist.py  test_rnn.py
tests/: CMakeLists.txt  test_all_modules.cpp  test_all_modules.py  test_napcas.cpp  test_napcas.py
tests/cpp/: test_tensor.cpp
tests/python/: test_tensor_generated.py
