[project]
name = "napcas"
version = "1.0.0"
description = "Neural Adaptive Processing and Connectivity Analysis System"
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "h5py>=3.6.0",
    "pybind11>=2.6.0",
    "tensorboard>=2.9.0",
    "plotly>=5.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"
